--- a/MomijiDriver/TestPage.xaml
+++ b/MomijiDriver/TestPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="Momiji.Driver.TestPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Momiji.Driver"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="TestPage">
+<?xml version="1.0" encoding="utf-8"?>
+<UserControl
+    x:Class="Momiji.Driver.TestPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:Momiji.Driver"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 
     <Grid RenderTransformOrigin="0.8,0.3" Margin="-15,4,15,83">
         <Grid.Background>
@@ -15,6 +15,7 @@
                 <GradientStop Color="#FFB9A0C3" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
+        <!--
         <Grid.RenderTransform>
             <TransformGroup>
                 <ScaleTransform/>
@@ -24,9 +25,12 @@
             </TransformGroup>
         </Grid.RenderTransform>
         <TextBox HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        -->
+
         <Button Content="Button" HorizontalAlignment="Left" Height="18" Margin="155,10,0,0" VerticalAlignment="Top" Width="75"/>
         <CheckBox x:Name="CheckBox" Content="CheckBox" HorizontalAlignment="Left" Margin="155,43,0,0" VerticalAlignment="Top"/>
         <ComboBox HorizontalAlignment="Left" Margin="150,78,0,0" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
-</Page>
+
+</UserControl>
